Bug 403524 - URL navigator's drop down list of recent places doesn't contain recent places
Summary: URL navigator's drop down list of recent places doesn't contain recent places
Status: RESOLVED FIXED
Alias: None
Product: frameworks-kio
Classification: Frameworks and Libraries
Component: URL navigator (other bugs)
Version First Reported In: 5.55.0
Platform: Other Linux
: NOR minor
Target Milestone: ---
Assignee: David Faure
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-01-23 08:53 UTC by davidblunkett
Modified: 2020-08-14 07:43 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
dialog picture (61.76 KB, image/png)
2019-02-26 09:17 UTC, davidblunkett
Details

Note You need to log in before you can comment on or make changes to this bug.
Description davidblunkett 2019-01-23 08:53:48 UTC
The list of recent places in the files save_as menu doesn't contain recent places that are updated between instances.

As an example: I open three files (say from another kde app, kmail) and I want to save them in "/home/fred/bloggs/saved_files/January" and I navigate to "/home/fred/bloggs/saved_files/January" in the first file and then I might, reasonably expect "/home/fred/bloggs/saved_files/January" to appear in the recent files list when I do this in the other instances but it doesn't.

In order for this to happen I have to quit okular (to update the list) and start again.  Furthermore, if I then quit another okular (that may have been running for months) this overwrites the list with old locations.

To me the recent files list should contain recently used files as determined by the wall clock across all local instances of okular.
Comment 1 Nate Graham 2019-02-06 05:11:50 UTC
Can you attach a screenshot of your Save dialog? I want to make sure you're referring to what I think you're referring to.
Comment 2 Bug Janitor Service 2019-02-21 04:33:06 UTC
Dear Bug Submitter,

This bug has been in NEEDSINFO status with no change for at least
15 days. Please provide the requested information as soon as
possible and set the bug status as REPORTED. Due to regular bug
tracker maintenance, if the bug is still in NEEDSINFO status with
no change in 30 days the bug will be closed as RESOLVED > WORKSFORME
due to lack of needed information.

For more information about our bug triaging procedures please read the
wiki located here:
https://community.kde.org/Guidelines_and_HOWTOs/Bug_triaging

If you have already provided the requested information, please
mark the bug as REPORTED so that the KDE team knows that the bug is
ready to be confirmed.

Thank you for helping us make KDE software even better for everyone!
Comment 3 davidblunkett 2019-02-25 22:59:52 UTC
To be sure: I'm referring to the path that appears above the file list.

If you click the path it becomes a text entry box with a pull down list of recent places.  If you pull the recent places down it doesn't update between instances.

I can't get a screenshot because the list hides when it loses focus.
Comment 4 Nate Graham 2019-02-25 23:08:12 UTC
you can get a screenshot by using Spectacle's timer with Full Screen or Rectangular Region mode. Set the delay to 2 seconds, click "take screenshot", then open the menu before it takes the screenshot.
Comment 5 davidblunkett 2019-02-26 09:17:11 UTC
Created attachment 118370 [details]
dialog picture
Comment 6 Nate Graham 2019-02-26 16:29:39 UTC
Thanks!
Comment 7 David Faure 2020-08-02 12:46:30 UTC
OK. Step one, fixing the regression that limited that "path combo" at the top to 5 items (4 defaults + 1 useful).
https://invent.kde.org/frameworks/kio/-/merge_requests/90

I'll look at propagating updates next...
Comment 8 Bug Janitor Service 2020-08-02 22:33:38 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/kio/-/merge_requests/92
Comment 9 David Faure 2020-08-14 07:43:50 UTC
Git commit 5ae49645e211c37f1f104d2c9ba818bfe1d6d10c by David Faure.
Committed on 14/08/2020 at 07:43.
Pushed by dfaure into branch 'master'.

KFileWidget: reparse config to grab dirs added by other instances of the app

Can't use KConfigWatcher since KFileWidget is short-lived. Well it would
have to be a Q_GLOBAL_STATIC, use memory and watch forever even if the
user is no longer using the file dialog in this app, not sure the
tradeoff is a good one.

With the current solution, I measured that the reparseConfiguration call
takes 4ms in kmail (very large app config file), seems acceptable.
(Non-optimized Qt build, optimized KF5 build, SSD)

M  +1    -0    src/filewidgets/kfilewidget.cpp

https://invent.kde.org/frameworks/kio/commit/5ae49645e211c37f1f104d2c9ba818bfe1d6d10c