KFileWidget: reparse config to grab dirs added by other instances of the app

BUG: 403524

Can't use KConfigWatcher since KFileWidget is short-lived. Well it would
have to be a Q_GLOBAL_STATIC, use memory and watch forever even if the
user is no longer using the file dialog in this app, not sure the
tradeoff is a good one.

With the current solution, I measured that the reparseConfiguration call
takes 4ms in kmail (very large app config file), seems acceptable.
(Non-optimized Qt build, optimized KF5 build, SSD)